added repository pattern and UOW

--- a/Library.Services/Library.Services.csproj
+++ b/Library.Services/Library.Services.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Library.Data\Library.Data.csproj" />
+    <ProjectReference Include="..\Library.DomainClasses\Library.DomainClasses.csproj" />
+  </ItemGroup>
+
 </Project>
